fix: fix gallery section overflow for 768px

--- a/museum-adaptive/assets/sass/_gallery.sass
+++ b/museum-adaptive/assets/sass/_gallery.sass
@@ -65,6 +65,7 @@
             @media screen and (max-width: 769px)
                 columns: 2
                 column-gap: 24px
+                overflow-x: hidden
         @media screen and (max-width: 1025px)
             max-height: 1400px        
         @media screen and (max-width: 769px)
